...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fragment_property_form_type_text_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/fragment_property_form_price_text_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/fragment_property_form_surface_text_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fragment_property_form_estate_agent_text_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fragment_property_form_description_text_input"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/fragment_property_form_number_of_rooms_text_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/fragment_property_form_number_of_bathrooms_text_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/fragment_property_form_number_of_bedrooms_text_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fragment_property_form_address_first_text_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fragment_property_form_address_second_text_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/fragment_property_form_zip_code_text_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/fragment_property_form_city_text_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/fragment_property_form_near_school_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                    <com.google.android.material.switchmaterial.SwitchMaterial

                        android:id="@+id/fragment_property_form_near_transports_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                    <com.google.android.material.switchmaterial.SwitchMaterial

                        android:id="@+id/fragment_property_form_near_shops_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/fragment_property_form_near_parks_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
