<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/activity_main_drawer_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/map" />
    <item
        android:id="@+id/activity_main_drawer_loan"
        android:icon="@drawable/ic_baseline_bank_24"
        android:title="@string/loan" />
    <item
        android:id="@+id/activity_main_drawer_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />
</menu>