<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_activity_toolbar_menu_refresh_button"
        android:icon="@drawable/ic_baseline_loop_24"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/main_activity_toolbar_menu_filter_button"
        android:icon="@drawable/ic_filter_alt_white_24"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/main_activity_toolbar_menu_creation_button"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/creation"
        app:showAsAction="ifRoom" />
</menu>