<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.mapView.MapViewActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/activity_map_view_toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/activity_map_view_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:title="@string/map"
                app:titleTextAppearance="@style/TitleToolbarStyle" />

        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:id="@+id/activity_map_view_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_map_view_toolbar_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>